# goms-rs

./: Cargo.toml  README.md
src/watch/: client.rs  connect.rs  message.rs  mod.rs
watch-go/: go.mod  go.sum
