[package]
name = "goms-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
chrono = "0.4.26"
log = "0.4.19"
env_logger = "0.10.0"
anyhow = "1.0.72"
